# zkp-decentralized-ai

./: CMakeLists.txt  CMakeLists.txt.libff  CMakeLists.txt.libsnark  README.md  build_crypto_utility.sh  build_sandbox_dependencies.sh  fetch_dependencies.sh  install_sandbox_dependencies.sh
zkdoc/: CMakeLists.txt
zkdoc/src/: dataset-representation.hpp  field_utils.hpp  field_utils.tcc  httplib.h  mimc_cipher_gadget.hpp  trusted_ai_cp_gadgets.hpp  trusted_ai_filter_snark.hpp  trusted_ai_hash_consistency_snark.hpp  trusted_ai_interactive_gadgets.hpp  trusted_ai_nizk.hpp  trusted_ai_rom_access_snark.hpp  trusted_ai_simultaneous_permutation_snark.hpp  trusted_ai_utility_gadgets.hpp  zk_rest_server.cpp
zkdoc/src/adaptive-snark/: r1cs_adaptive_snark.hpp  trapdoor_commitment.hpp
zkdoc/src/benchmarks/: data_representation_test.cpp  lookup_gadget_benchmark.cpp  run_nizk_benchmarks.cpp  run_proto_benchmarks.cpp
zkdoc/src/hashing/: blake2b.hpp  blake2b.tcc  hashing.hpp
